--- a/DemoApp/DemoApplication/Views/Admin/Navbar/Update.cshtml
+++ b/DemoApp/DemoApplication/Views/Admin/Navbar/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using DemoApplication.ViewModels.Admin.Subnavbar
+@using DemoApplication.ViewModels.Admin.Navbar
 @model AddviewModel
-
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -10,13 +10,13 @@
             </div>
             <div class="card-body">
                 <div class="general-label">
-                    <form method="POST" asp-route="subnavbar-add">
+                    <form method="POST" asp-controller="Subnavbar" asp-action="update" asp-route-id="@Model.Id" >
                         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-
+                        
 
                         <div class="form-group">
                             <label>Navbars</label>
-                            <select asp-for="NavbarId" asp-items="@(new SelectList(Model.Navbars, nameof(SubNavbarListViewModel.Id), nameof(SubNavbarListViewModel.Name)))" class="form-select">                            </select>
+                            <select asp-for="NavbarId" asp-items="@(new SelectList(Model.Navbars, nameof(NavbarListViewModel.Id), nameof(NavbarListViewModel.Name)))" class="form-select">                            </select>
                             <span asp-validation-for="NavbarId" class="text-danger"></span>
                         </div>
                         <div class="form-group">
@@ -29,7 +29,11 @@
                             <input asp-for="ToUrl" class="form-control">
                             <span asp-validation-for="ToUrl" class="text-danger"></span>
                         </div>
-
+                        <div class="form-group">
+                            <label>Row</label>
+                            <input asp-for="Row" class="form-control">
+                            <span asp-validation-for="Row" class="text-danger"></span>
+                        </div>
 
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
