--- a/DemoApp/DemoApplication/Views/Admin/Navbar/Add.cshtml
+++ b/DemoApp/DemoApplication/Views/Admin/Navbar/Add.cshtml
@@ -21,24 +21,24 @@
                         <input asp-for="Row" class="form-control" type="number">
                         <span asp-validation-for="Row" class="text-danger"></span>
                     </div>
-@*                    <div class="form-check">
-                        <input asp-for="IsMain" class="form-check-input" type="radio" name="flexRadioDefault" value="true" id="isMain" checked>
-                        <label class="form-check-label>
+                    <div class="form-check">
+                        <input asp-for="IsMain" class="form-check-input">
+                        <label class="form-check-label">
                             IsMain
                         </label>
                     </div>
                     <div class="form-check">
-                        <input asp-for="IsHeader" class="form-check-input" type="radio" name="flexRadioDefault" value="true" id="isHeader">
+                        <input asp-for="IsHeader" class="form-check-input">
                         <label class="form-check-label">
                             IsHeader
                         </label>
                     </div>
                     <div class="form-check">
-                        <input asp-for="IsFooter" class="form-check-input" type="radio" name="flexRadioDefault" value="true" id="isFooter">
+                        <input asp-for="IsFooter" class="form-check-input">
                         <label class="form-check-label">
                             IsFooter
                         </label>
-                    </div>*@
+                    </div>
 
 
 
