--- a/DemoApp/DemoApplication/Views/Admin/Navbar/Update.cshtml
+++ b/DemoApp/DemoApplication/Views/Admin/Navbar/Update.cshtml
@@ -1,38 +1,42 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using DemoApplication.ViewModels.Admin.Subnavbar
 @using DemoApplication.ViewModels.Admin.Navbar
-@model AddviewModel
+@model NavbarUpdateViewModel
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Subnavbars</h4>
+                <h4 class="card-title">Navbars</h4>
             </div>
             <div class="card-body">
                 <div class="general-label">
-                    <form method="POST" asp-controller="Subnavbar" asp-action="update" asp-route-id="@Model.Id" >
+                    <form method="POST" asp-controller="Navbar" asp-action="update">
                         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-                        
+
 
                         <div class="form-group">
-                            <label>Navbars</label>
-                            <select asp-for="NavbarId" asp-items="@(new SelectList(Model.Navbars, nameof(NavbarListViewModel.Id), nameof(NavbarListViewModel.Name)))" class="form-select">                            </select>
-                            <span asp-validation-for="NavbarId" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>Name</label>
+                            <label asp-for="Name"></label>
                             <input asp-for="Name" class="form-control">
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label>ToUrl</label>
-                            <input asp-for="ToUrl" class="form-control">
-                            <span asp-validation-for="ToUrl" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>Row</label>
+                            <label asp-for="Row"></label>
                             <input asp-for="Row" class="form-control">
                             <span asp-validation-for="Row" class="text-danger"></span>
+                        </div>
+                        <div class="form-check form-switch">
+                            <label asp-for="IsMain"></label>
+                            <input type="checkbox" asp-for="IsMain" class="form-check-input">
+                            <span asp-validation-for="IsMain" class="text-danger"></span>
+                        </div>
+                        <div class="form-check form-switch">
+                            <label asp-for="IsHeader"></label>
+                            <input type="checkbox" asp-for="IsHeader" class="form-check-input">
+                            <span asp-validation-for="IsHeader" class="text-danger"></span>
+                        </div>
+                        <div class="form-check form-switch">
+                            <label asp-for="IsFooter"></label>
+                            <input type="checkbox" asp-for="IsFooter" class="form-check-input">
+                            <span asp-validation-for="IsFooter" class="text-danger"></span>
                         </div>
 
                         <button type="submit" class="btn btn-primary">Submit</button>
