--- a/DemoApp/DemoApplication/Views/Admin/Subnavbar/Update.cshtml
+++ b/DemoApp/DemoApplication/Views/Admin/Subnavbar/Update.cshtml
@@ -1,7 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using DemoApplication.ViewModels.Admin.Subnavbar
-@using DemoApplication.ViewModels.Admin.Navbar
-@model AddviewModel
+@using DemoApplication.ViewModels.Admin.SubNavbar
+@model UpdateViewModel
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -10,13 +9,11 @@
             </div>
             <div class="card-body">
                 <div class="general-label">
-                    <form method="POST" asp-controller="Subnavbar" asp-action="update" asp-route-id="@Model.Id" >
-                        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+                    <form method="POST" asp-route="subnavbar-update">
                         
-
                         <div class="form-group">
                             <label>Navbars</label>
-                            <select asp-for="NavbarId" asp-items="@(new SelectList(Model.Navbars, nameof(NavbarListViewModel.Id), nameof(NavbarListViewModel.Name)))" class="form-select">                            </select>
+                            <select asp-for="NavbarId" asp-items="@(new SelectList(Model.Navbar, nameof(SubNavbarViewModel.Id), nameof(SubNavbarViewModel.Name)))" class="form-select">                            </select>
                             <span asp-validation-for="NavbarId" class="text-danger"></span>
                         </div>
                         <div class="form-group">
